<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>com.github.ukgovld</groupId>
  <artifactId>registry-core</artifactId>
  <packaging>war</packaging>
  <version>3.0.0-SNAPSHOT</version>
  <name>Registry Core</name>
  <url>http://maven.apache.org</url>

  <scm>
    <developerConnection>scm:git:git@github.com:UKGovLD/registry-core.git</developerConnection>
    <tag>HEAD</tag>
  </scm>

  <repositories>
    <repository>
      <id>apache-repo-releases</id>
      <url>https://repository.apache.org/content/repositories/releases/</url>
      <releases>
        <enabled>true</enabled>
      </releases>

    </repository>
    <repository>
      <id>apache-repo-snapshots</id>
      <url>https://repository.apache.org/content/repositories/snapshots/</url>
      <releases>
        <enabled>false</enabled>
      </releases>
      <snapshots>
        <enabled>true</enabled>
      </snapshots>
    </repository>
  
    <repository>
      <releases>
        <enabled>true</enabled>
      </releases>
      <snapshots>
        <enabled>true</enabled>
      </snapshots>
      <id>epi-public-repo</id>
      <name>Epimorphics Public Repository</name>
      <url>https://repository.epimorphics.com</url>
    </repository>
    
    <repository>  
     <id>ukgovld-s3-snapshot</id>  
     <name>UKGovLD snapshot repository</name>  
     <url>s3://ukgovld/snapshot</url>  
     <releases>  
       <enabled>false</enabled>  
     </releases>  
     <snapshots>  
       <enabled>true</enabled>  
     </snapshots>  
    </repository>  
    
    <repository>  
     <id>ukgovld-s3-release</id>  
     <name>UKGovLD release repository</name>  
     <url>s3://ukgovld/release</url>  
     <releases>  
       <enabled>true</enabled>  
     </releases>  
     <snapshots>  
       <enabled>false</enabled>  
     </snapshots>  
    </repository>  
     
  </repositories>

   <distributionManagement>  
     <repository>  
       <id>ukgovld-s3-release</id>  
       <name>UKGovLD release repository</name>  
       <url>s3://ukgovld/release</url>  
     </repository>  
     <snapshotRepository>  
       <id>ukgovld-s3-snapshot</id>  
       <name>UKGovLD snapshot repository</name>  
       <url>s3://ukgovld/snapshot</url>  
     </snapshotRepository>  
   </distributionManagement> 

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <oltu.oauth2.version>1.0.2</oltu.oauth2.version>
    <jersey.version>3.1.11</jersey.version>
    <appbase.version>4.0.0-SNAPSHOT</appbase.version>
    <jena.version>5.5.0</jena.version>
    <tomcat.version>11.0.10</tomcat.version>
    <lib.version>4.0.0-SNAPSHOT</lib.version>
    <shiro.version>2.0.5</shiro.version>
    <log4j.version>2.25.0</log4j.version>
      <derby.version>10.17.1.0</derby.version>
      <jackson.version>2.20.1</jackson.version>
      <mockito.version>5.20.0</mockito.version>
  </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.apache.shiro</groupId>
                <artifactId>shiro-bom</artifactId>
                <version>${shiro.version}</version>
                <scope>import</scope>
                <type>pom</type>
            </dependency>
        </dependencies>
    </dependencyManagement>

  <dependencies>
      <dependency>
          <groupId>org.junit.jupiter</groupId>
          <artifactId>junit-jupiter-api</artifactId>
          <version>5.12.2</version>
          <scope>test</scope>
      </dependency>
    <dependency>
      <groupId>org.apache.logging.log4j</groupId>
      <artifactId>log4j-core</artifactId>
      <version>${log4j.version}</version>
    </dependency>
    <dependency>
      <groupId>org.apache.logging.log4j</groupId>
      <artifactId>log4j-1.2-api</artifactId>
      <version>${log4j.version}</version>
    </dependency>
    <dependency>
      <groupId>org.apache.logging.log4j</groupId>
      <artifactId>log4j-layout-template-json</artifactId>
      <version>${log4j.version}</version>
    </dependency>
    <dependency>
      <groupId>com.epimorphics</groupId>
      <artifactId>appbase</artifactId>
      <version>${appbase.version}</version>
      <exclusions>
        <exclusion>
          <artifactId>log4j</artifactId>
          <groupId>log4j</groupId>
        </exclusion>
      </exclusions>
    </dependency>

    <dependency>
      <groupId>com.epimorphics</groupId>
      <artifactId>lib</artifactId>
      <version>${lib.version}</version>
    </dependency>
    
    <dependency>
      <groupId>org.apache.jena</groupId>
      <artifactId>jena-querybuilder</artifactId>
      <version>${jena.version}</version>
    </dependency>
    <dependency>
      <groupId>org.apache.tomcat.embed</groupId>
      <artifactId>tomcat-embed-core</artifactId>
      <version>${tomcat.version}</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>org.apache.tomcat.embed</groupId>
      <artifactId>tomcat-embed-jasper</artifactId>
      <version>${tomcat.version}</version>
      <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>org.glassfish.jersey.connectors</groupId>
       <artifactId>jersey-apache-connector</artifactId>
       <version>${jersey.version}</version>
       <scope>test</scope>
     </dependency>
    <dependency>
        <groupId>org.glassfish.jersey.media</groupId>
        <artifactId>jersey-media-multipart</artifactId>
        <version>${jersey.version}</version>
    </dependency>
      <dependency>
          <groupId>org.glassfish.jersey.inject</groupId>
          <artifactId>jersey-hk2</artifactId>
          <version>${jersey.version}</version>
      </dependency>
      <dependency>
          <groupId>javax.servlet</groupId>
          <artifactId>javax.servlet-api</artifactId>
          <version>4.0.1</version>
      </dependency>
      <dependency>
          <groupId>jakarta.activation</groupId>
          <artifactId>jakarta.activation-api</artifactId>
          <version>2.1.4</version>
      </dependency>
      <dependency>
          <groupId>org.glassfish.jaxb</groupId>
          <artifactId>jaxb-runtime</artifactId>
          <version>2.3.3</version>
      </dependency>
     <dependency>
      <groupId>org.apache.shiro</groupId>
      <artifactId>shiro-core</artifactId>
         <classifier>jakarta</classifier>
    </dependency>
      <dependency>
          <groupId>org.apache.derby</groupId>
          <artifactId>derby</artifactId>
          <version>${derby.version}</version>
      </dependency>
      <dependency>
          <groupId>org.apache.derby</groupId>
          <artifactId>derbytools</artifactId>
          <version>${derby.version}</version>
      </dependency>
    <dependency>
      <groupId>org.apache.shiro</groupId>
      <artifactId>shiro-web</artifactId>
        <classifier>jakarta</classifier>
    </dependency>
      <dependency>
          <groupId>org.apache.shiro</groupId>
          <artifactId>shiro-jakarta-ee</artifactId>
          <classifier>jakarta</classifier>
      </dependency>
    <dependency>
      <groupId>org.fusesource.stompjms</groupId>
      <artifactId>stompjms-client</artifactId>
      <version>1.19</version>
    </dependency>
    <dependency>
      <groupId>com.fasterxml.jackson.core</groupId>
      <artifactId>jackson-databind</artifactId>
      <version>${jackson.version}</version>
    </dependency>
      <dependency>
          <groupId>com.fasterxml.jackson.core</groupId>
          <artifactId>jackson-core</artifactId>
          <version>${jackson.version}</version>
      </dependency>
      <dependency>
          <groupId>org.apache.httpcomponents</groupId>
          <artifactId>httpclient</artifactId>
          <version>4.5.14</version>
      </dependency>
      <dependency>
          <groupId>commons-io</groupId>
          <artifactId>commons-io</artifactId>
          <version>2.20.0</version>
      </dependency>
      <dependency>
          <groupId>commons-codec</groupId>
          <artifactId>commons-codec</artifactId>
          <version>1.19.0</version>
      </dependency>
    <dependency>
      <groupId>javax.jms</groupId>
      <artifactId>javax.jms-api</artifactId>
      <version>2.0.1</version>
    </dependency>
    <dependency>
      <groupId>org.apache.oltu.oauth2</groupId>
      <artifactId>org.apache.oltu.oauth2.client</artifactId>
      <version>${oltu.oauth2.version}</version>
    </dependency>
    <dependency>
      <groupId>org.apache.oltu.oauth2</groupId>
      <artifactId>org.apache.oltu.oauth2.jwt</artifactId>
      <version>${oltu.oauth2.version}</version>
    </dependency>
      <dependency>
          <groupId>org.json</groupId>
          <artifactId>json</artifactId>
          <version>20250107</version>
      </dependency>
      <dependency>
          <groupId>ch.qos.logback</groupId>
          <artifactId>logback-classic</artifactId>
          <version>1.5.20</version>
      </dependency>
    <dependency>
      <groupId>org.apache.jena</groupId>
      <artifactId>jena-fuseki-main</artifactId>
      <version>${jena.version}</version>
      <exclusions>
        <exclusion>
          <groupId>org.eclipse.jetty</groupId>
          <artifactId>jetty-ee10-servlet</artifactId>
        </exclusion>
        <exclusion>
          <groupId>org.eclipse.jetty</groupId>
          <artifactId>jetty-ee10-servlets</artifactId>
        </exclusion>
      </exclusions>
     </dependency>
      <dependency>
          <groupId>org.mockito</groupId>
          <artifactId>mockito-core</artifactId>
          <version>${mockito.version}</version>
          <scope>test</scope>
      </dependency>
      <dependency>
          <groupId>org.apache.httpcomponents</groupId>
          <artifactId>httpclient-cache</artifactId>
          <version>4.5.14</version>
      </dependency>
      <dependency>
          <groupId>com.github.jsonld-java</groupId>
          <artifactId>jsonld-java</artifactId>
          <version>0.13.2</version>
      </dependency>
  </dependencies>

  <build>
    <plugins>

<!-- 
      <plugin>
        <artifactId>maven-assembly-plugin</artifactId>
        <version>2.4</version>
        <configuration>
          <descriptors>
            <descriptor>src/main/assembly/src.xml</descriptor>
          </descriptors>
        </configuration>
        <executions>
          <execution>
            <id>make-assembly</id>
            <phase>package</phase>
            <goals>
              <goal>single</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
 -->
 
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>2.3.2</version>
        <configuration>
          <source>21</source>
          <target>21</target>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-scm-plugin</artifactId>
        <version>1.7</version>
        <configuration>
          <connectionType>developerConnection</connectionType>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-source-plugin</artifactId>
        <version>2.1.2</version>
        <executions>
          <execution>
            <id>attach-sources</id>
            <phase>verify</phase>
            <goals>
              <goal>jar-no-fork</goal>
            </goals>
          </execution>
        </executions>
      </plugin>

<!--     <plugin>-->
<!--       <groupId>org.apache.maven.plugins</groupId>-->
<!--       <artifactId>maven-javadoc-plugin</artifactId>-->
<!--       <configuration>-->
<!--         <doclint>none</doclint>-->
<!--       </configuration>-->
<!--       <executions>-->
<!--         <execution>-->
<!--           <id>attach-javadocs</id>-->
<!--           <phase>verify</phase>-->
<!--           <goals>-->
<!--             <goal>jar</goal>-->
<!--           </goals>-->
<!--         </execution>-->
<!--       </executions>-->
<!--     </plugin>-->

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-release-plugin</artifactId>
        <version>2.5.3</version>
      </plugin>

      <!-- Run in root context using maven tomcat plugin -->
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>tomcat-maven-plugin</artifactId>
        <configuration>
          <path>/</path>
        </configuration>
      </plugin>

      <plugin>
        <artifactId>maven-war-plugin</artifactId>
        <version>3.2.3</version>
        <configuration>
          <attachClasses>true</attachClasses>
          <webXml>${basedir}/src/main/webapp/WEB-INF/web.xml</webXml>
        </configuration>
      </plugin>
        <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-surefire-plugin</artifactId>
            <version>3.5.3</version>
            <configuration>
                <properties>
                    <excludeTags>slow</excludeTags>
                </properties>
                <argLine>
                    -javaagent:${settings.localRepository}/org/mockito/mockito-core/${mockito.version}/mockito-core-${mockito.version}.jar
                    -Xshare:off
                    -Dtomcat.util.scan.StandardJarScanFilter.jarsToSkip=derby*.jar
                    --add-opens=java.base/java.net=ALL-UNNAMED
                </argLine>
            </configuration>
        </plugin>
    </plugins>

    <extensions>
      <extension>
        <groupId>org.apache.maven.wagon</groupId>
        <artifactId>wagon-ftp</artifactId>
        <version>2.12</version>
      </extension>
      
     <extension>
        <groupId>org.springframework.build</groupId>
        <artifactId>aws-maven</artifactId>
        <version>5.0.0.RELEASE</version>
      </extension>
      
    </extensions>

    <pluginManagement>
      <plugins>
        <!--This plugin's configuration is used to store Eclipse m2e settings only. It has no influence on the Maven build itself.-->
        <plugin>
          <groupId>org.eclipse.m2e</groupId>
          <artifactId>lifecycle-mapping</artifactId>
          <version>1.0.0</version>
          <configuration>
            <lifecycleMappingMetadata>
              <pluginExecutions>
                <pluginExecution>
                  <pluginExecutionFilter>
                    <groupId>org.apache.jena.tools</groupId>
                    <artifactId>schemagen</artifactId>
                    <versionRange>[0.2-SNAPSHOT,)</versionRange>
                    <goals>
                      <goal>translate</goal>
                    </goals>
                  </pluginExecutionFilter>
                  <action>
                    <ignore />
                  </action>
                </pluginExecution>
              </pluginExecutions>
            </lifecycleMappingMetadata>
          </configuration>
        </plugin>
      </plugins>
    </pluginManagement>
  </build>

</project>
